debug-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: debug-pod
  namespace: database
spec:
  containers:
  - name: debug-container
    image: nicolaka/netshoot
    command: ["/bin/sh", "-c", "sleep infinity"]
