phpmyadmin-ingress.yaml

# This YAML file defines an Ingress resource in Kubernetes.
# The Ingress is named "phpmyadmin-ingress" and belongs to the "database" namespace.
#
# The Ingress resource manages external access to the services within the cluster.
# It provides HTTP and HTTPS routing to the services.

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: phpmyadmin-ingress
  namespace: database
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /  # The annotation used by NGINX Ingress Controller to rewrite the target URL.
spec:
  tls:
  - hosts:
      - mysql.marvel.com  # The hostname for which the TLS certificate is valid.
    secretName: mysql-ingress-tls-secret  # The secret that contains the TLS certificate and key.
  rules:
  - host: mysql.marvel.com  # The hostname for which the rule applies.
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: phpmyadmin-svc  # The service to which traffic should be directed.
            port:
              number: 80  # The port on the service to which traffic should be directed.
